--- a/demo/locales/es.json
+++ b/demo/locales/es.json
@@ -1,12 +1,17 @@
 {
     "label": "Registro",
     "title": "Hola Mundo!",
-    "sesion": "Iniciar Sesion",
+    "sesion": "Iniciar sesíon",
     "user": "Nombre de usuario",
     "password": "Contraseña",
     "confirmPassword":"Confirme contraseña",
-    "name": "Nombre completo",
+    "name": "Nombres",
+    "lastName": "Apellidos",
+    "age": "Edad",
     "register": "Registrar",
-    "signIn":"¿Aun no tienes cuenta? Crea una!"
-
+    "signIn":"¿Aun no tienes cuenta? Crea una!",
+    "account":"¿Tienes cuenta? Da click",
+    "here":"Aqui",
+    "data":"Datos de Usuario",
+    "logout":"Cerrar sesíon"
 }
